css/style.css
/* ... */
.platform-android .action-sheet {
    margin-left: 8px;
    margin-right: 8px;
}
.platform-android .action-sheet-group {
    margin-bottom: 8px;
    border-radius: 4px;
    background-color: #fff;
}
.platform-android .action-sheet-cancel {
   display: block;
}
/*.bar.login-header {
    color: #fff;
    
    background-color: #00619D;
    background-image: linear-gradient(0deg, #0c63ee, #0c63ee 50%, transparent 50%); 
    color: #fff;
    background: transparent;
    height: 100%;
    border: 0 none;
    max-height: 175px;
}
.bar.login-header div {
    width: 100%;
    padding: 65px 0 20px 0;
}
.bar.login-header h3 {
    font-size: 48px;
    text-shadow: 0 1px 0 #000;
    color: #fff;
    font-weight: 800;
    font-family: sans-serif;
}
.bar.login-header h4 {
    font-size: 13px;
    font-weight: bold
}
.bar.login-header h3, .bar.login-header h4 {
    color: #fff;
}
.login-view .form-wrapper:before {
    margin-top: 130px;
}*/

